BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Rate_Card_Template__c.object
<CustomObject>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Hourly__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Hourly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Support Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLA Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rate Card Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Card Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Card Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>